--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1231,7 +1231,8 @@
     <string name="kernel_version">Kernel version</string>
     <!-- About phone screen,  setting option name-->
     <string name="build_number">Build number</string>
-
+	<!-- About phone screen,  Evervolv rom version.-->
+    <string name="rom_version">Rom Version</string>
     <!-- About phone screen, show when a value of some status item is unavailable. -->
     <string name="device_info_not_available">Not available</string>
     <!-- About phone screen, phone status screen title -->
