--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2874,4 +2874,5 @@ found in the list of installed applications.</string>
 
     <!-- Wimax Widget -->
     <string name="wimax_gadget_title">4G Toggle</string>
+    <string name="wimax_gadget_caption">4G</string>
 </resources>
