--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2874,5 +2874,10 @@ found in the list of installed applications.</string>
 
     <!-- Wimax Widget -->
     <string name="wimax_gadget_title">4G Toggle</string>
-    <string name="wimax_gadget_caption">4G</string>
+    <string name="wimax_gadget_caption">Wimax</string>
+
+    <!-- Wifi Widget -->
+    <string name="wifi_gadget_title">WiFi Toggle</string>
+    <string name="wifi_gadget_caption">WiFi</string>
+
 </resources>
