Fix widget bug - milesje
Add Bluetooth widget.

Change-Id: Iec881b2b46194f16e0cb0bd2b89050ec0ea7c066

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2880,4 +2880,7 @@ found in the list of installed applications.</string>
     <string name="wifi_gadget_title">WiFi Toggle</string>
     <string name="wifi_gadget_caption">WiFi</string>
 
+    <!-- Bluetooth Widget -->
+    <string name="bluetooth_gadget_title">Bluetooth Toggle</string>
+    <string name="bluetooth_gadget_caption">Bluetooth</string>
 </resources>
