--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2883,4 +2883,8 @@ found in the list of installed applications.</string>
     <!-- Bluetooth Widget -->
     <string name="bluetooth_gadget_title">Bluetooth Toggle</string>
     <string name="bluetooth_gadget_caption">Bluetooth</string>
+
+    <!-- GPS Widget -->
+    <string name="gps_gadget_title">GPS Toggle</string>
+    <string name="gps_gadget_caption">GPS</string>
 </resources>
