Add brightness widget support. Not 100%, but wanted to release with what we had.
Change-Id: I209936fac6d2bede8d5bbe99bd6a487623f15e67

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2891,4 +2891,9 @@ found in the list of installed applications.</string>
     <!-- Sync Widget -->
     <string name="sync_gadget_title">Sync Toggle</string>
     <string name="sync_gadget_caption">Sync</string>
+
+    <!-- Brightness Widget -->
+    <string name="brightness_gadget_title">Brightness Toggle</string>
+    <string name="brightness_gadget_caption">Brightness</string>
+
 </resources>
